{
    "name": "CameraInput",
    "maps": [
        {
            "name": "CameraLook",
            "id": "62215f8a-9506-4002-9a23-fb2aacea879d",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "1513e25c-5d6f-417b-a100-1cdf0509ea38",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2122514b-c5e2-49bc-b50f-b2f0b68f94d8",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "899d5273-92e6-4041-935a-c47631e4f42f",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}